// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        id="default"
        multiple=""
        style="display: none;"
        type="file"
      />
      <button
        class="ant-btn emotion-0"
        id="default_button"
        type="button"
      >
        <svg
          class="emotion-1"
          data-testid="AiOutlineExclamationCircle"
          id="default_button_icon"
        />
        <span
          class="emotion-1"
        >
          Upload
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`Render properties.accept - value[0] 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=".png,.jpg"
        id="properties.accept"
        multiple=""
        style="display: none;"
        type="file"
      />
      <button
        class="ant-btn emotion-0"
        id="properties.accept_button"
        type="button"
      >
        <svg
          class="emotion-1"
          data-testid="AiOutlineExclamationCircle"
          id="properties.accept_button_icon"
        />
        <span
          class="emotion-1"
        >
          Upload
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`Render properties.button - value[0] 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        id="properties.button"
        multiple=""
        style="display: none;"
        type="file"
      />
      <button
        class="ant-btn ant-btn-primary emotion-0"
        id="properties.button_button"
        type="button"
      >
        <svg
          class="emotion-1"
          data-testid="AiOutlineExclamationCircle"
          id="properties.button_button_icon"
        />
        <span
          class="emotion-1"
        >
          Upload
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`Render properties.disabled - value[0] 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text ant-upload-disabled"
  >
    <span
      class="ant-upload ant-upload-disabled"
      role="button"
    >
      <input
        accept=""
        multiple=""
        style="display: none;"
        type="file"
      />
      <button
        class="ant-btn emotion-0"
        disabled=""
        id="properties.disabled_button"
        type="button"
      >
        <svg
          class="emotion-1"
          data-testid="AiOutlineExclamationCircle"
          id="properties.disabled_button_icon"
        />
        <span
          class="emotion-1"
        >
          Upload
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`Render properties.showUploadList - value[0] 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        id="properties.showUploadList"
        multiple=""
        style="display: none;"
        type="file"
      />
      <button
        class="ant-btn emotion-0"
        id="properties.showUploadList_button"
        type="button"
      >
        <svg
          class="emotion-1"
          data-testid="AiOutlineExclamationCircle"
          id="properties.showUploadList_button_icon"
        />
        <span
          class="emotion-1"
        >
          Upload
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`Render properties.singleFile - value[0] 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        id="properties.singleFile"
        style="display: none;"
        type="file"
      />
      <button
        class="ant-btn emotion-0"
        id="properties.singleFile_button"
        type="button"
      >
        <svg
          class="emotion-1"
          data-testid="AiOutlineExclamationCircle"
          id="properties.singleFile_button_icon"
        />
        <span
          class="emotion-1"
        >
          Upload
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.accept 1`] = `true`;

exports[`Test Schema properties.accept 2`] = `null`;

exports[`Test Schema properties.button 1`] = `true`;

exports[`Test Schema properties.button 2`] = `null`;

exports[`Test Schema properties.disabled 1`] = `true`;

exports[`Test Schema properties.disabled 2`] = `null`;

exports[`Test Schema properties.showUploadList 1`] = `true`;

exports[`Test Schema properties.showUploadList 2`] = `null`;

exports[`Test Schema properties.singleFile 1`] = `true`;

exports[`Test Schema properties.singleFile 2`] = `null`;
